--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "reactflow": "^11.11.4",
+    "vis-network": "^9.1.9"
   }
 }
